Carregando Granted Authorities dos escopos do OAuth2 no Resource Server